...
            Button("CLICK ME!") {
                errorTitle = "new error!"
                //showError.toggle()
            }
        }
        .alert(errorTitle ?? "Error", isPresented: Binding(value: $errorTitle)) {
            Button("OK") {
                
            }
        }
        
//        .alert(errorTitle ?? "Error", isPresented: Binding(get: {
//            return errorTitle != nil
...
